crates/aranya-policy-compiler/tests/data/type_errors/no_member_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
3 |     return x.y
  |              ^ struct `Foo` has no member `y`
